kubernetes/apps/base/media/media-ottawa/maintainerr/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintainerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: app
        # renovate: datasource=docker depName=ghcr.io/maintainerr/maintainerr
        image: ghcr.io/maintainerr/maintainerr:3.29.0
        ports:
        - name: http
          containerPort: 6246
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /opt/data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: maintainerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
spec:
  selector:
    app: maintainerr
  ports:
  - name: http
    port: 6246
    protocol: TCP
    targetPort: 6246
  type: ClusterIP
