kubernetes/apps/base/media/media-ottawa/maintainerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  annotations:
    item.homer.rajsingh.info/name: "Maintainerr"
    item.homer.rajsingh.info/subtitle: "Media Library Cleanup"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/maintainerr.svg"
    item.homer.rajsingh.info/keywords: "app"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ts
    namespace: home
    sectionName: ${CLUSTER_DOMAIN_LISTENER}
  hostnames:
  - maintainerr.${CLUSTER_DOMAIN}
  rules:
  - backendRefs:
    - name: maintainerr
      port: 6246
    matches:
    - path:
        type: PathPrefix
        value: /
